fixed visibility

--- a/main.css
+++ b/main.css
@@ -42,6 +42,7 @@ body{
     justify-content: space-between;
     align-items: baseline;
     z-index: 10;
+    background-color: rgba(0,0,0,0.3)
 }
 .right-align{
     text-align: right;
@@ -368,14 +369,6 @@ body{
         align-items: center;
         transform: translate(-10%);
     }
-    .left{
-        width: 100%;
-        text-align: center;
-    }
-    .right{
-        width: 100%;
-        margin: auto;
-    }
     #book{
         height: 260vh;
         padding-top: 80px;
@@ -396,5 +389,20 @@ body{
     }
     .deluxe{
         margin: 20px;
+    }
+    .slide1{
+        background-position: center;
+    }
+    .slide2{
+        background-position: center;
+    }
+    .slide3{
+        background-position: center;
+    }
+    .slide4{
+        background-position: center;
+    }
+    .slide5{
+        background-position: center;
     }
 }
